--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -17,17 +17,14 @@
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Fecha_Subida)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Nombre_Solicitante)
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Grado_Fk)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Apellido_Solicitante)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Organismo_Fk)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Dependencia_Interna_Fk)
-            </th>        
+            </th>          
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].RTI_Solicitante)
             </th>
@@ -46,7 +43,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Prioridad)
+            </th>
+            <th>
+                <span>Destinar a empleado</span>
+            </th>            
         </tr>
     </thead>
     <tbody>
@@ -57,17 +59,14 @@
                     @Html.DisplayFor(modelItem => item.Fecha_Subida)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Nombre_Solicitante)
+                    @Html.DisplayFor(modelItem => item.Grado.Descripcion_Grado)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Apellido_Solicitante)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Organismo.Descripcion_organismo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Dependencia_Interna.Descripcion_Dependencia)
-                </td>              
+                </td>                          
                 <td>
                     @Html.DisplayFor(modelItem => item.RTI_Solicitante)
                 </td>
@@ -86,13 +85,20 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)
                 </td>
-                @* <td>
-                    <a asp-page="./Edit" asp-route-id="@item.ID_Tarea_Fk">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.ID_Tarea_Fk">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.ID_Tarea_Fk">Delete</a>
-                </td> *@
+                <td>
+                    @Html.DisplayFor(modelItem => item.Prioridad)
+                </td>
+                <td>
+                    <select>
+                        <option value="value">Seleccione empleado</option>
+                    </select>
+                </td>
+                <td>
+                   @* <a asp-page="./Edit" asp-route-id="@item.ID_Tarea_Fk">Edit</a> | *@
+                    <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Details</a> 
+                   @*<a asp-page="./Delete" asp-route-id="@item.ID_Tarea_Fk">Delete</a> *@
+                </td> 
             </tr>
         }
-
     </tbody>
 </table>
