--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -112,9 +112,9 @@
     body {
         align-items: center;
         justify-content: center;
-        width: 105%;
-        margin: 30px auto;
-        padding: 20px;
+        width: 120%;
+        margin: 10px;
+        padding: 10px;
         background-color: #e0e8f1;
         border: 1px solid #003d6b;
         border-radius: 8px;
@@ -194,8 +194,17 @@
             $tabla = document.querySelector("#tabla");
 
         $btnExportar.addEventListener("click", function () {
+            // Ocultar temporalmente la columna "Destinar a empleado" y "Details"
+            const columnasDestinar = document.querySelectorAll("table#tabla tr th:nth-child(12), table#tabla tr td:nth-child(12)");
+            const columnasDetails = document.querySelectorAll("table#tabla tr th:nth-child(13), table#tabla tr td:nth-child(13)");
+
+            columnasDestinar.forEach(columna => columna.style.display = 'none');
+            columnasDetails.forEach(columna => columna.style.display = 'none');
+
+            // Iniciar la exportación
             let tableExport = new TableExport($tabla, {
                 exportButtons: false, // No queremos botones adicionales
+                ignoreCols: [12, 13], // Ignorar las columnas 12 y 13
                 filename: "Reporte de Peticiones de Trabajo", // Nombre del archivo de Excel
                 sheetname: "Peticiones", // Título de la hoja
             });
@@ -212,6 +221,11 @@
                 preferenciasDocumento.RTL,
                 preferenciasDocumento.sheetname
             );
+
+            // Restaurar la visibilidad de las columnas "Destinar a empleado" y "Details"
+            columnasDestinar.forEach(columna => columna.style.display = '');
+            columnasDetails.forEach(columna => columna.style.display = '');
         });
     });
+
 </script>
