--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Pedidos de trabajo";
 }
 
-<h1>Index</h1>
+<h1>Pedidos de trabajo</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -24,7 +24,7 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Organismo_Fk)
-            </th>          
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].RTI_Solicitante)
             </th>
@@ -48,7 +48,7 @@
             </th>
             <th>
                 <span>Destinar a empleado</span>
-            </th>            
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -66,7 +66,7 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Organismo.Descripcion_organismo)
-                </td>                          
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.RTI_Solicitante)
                 </td>
@@ -77,7 +77,9 @@
                     @Html.DisplayFor(modelItem => item.Correo)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Tarea.Descripcion_Tarea)
+                    @Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ?
+                             item.Tarea.Descripcion_Tarea.Substring(3).ToLower() :
+                             item.Tarea.Descripcion_Tarea.ToLower())
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Observacion)
@@ -89,16 +91,107 @@
                     @Html.DisplayFor(modelItem => item.Prioridad)
                 </td>
                 <td>
-                    <select>
-                        <option value="value">Seleccione empleado</option>
-                    </select>
+                    <div class="form-group">                        
+                        <select id="usuarioSelect_@item.ID_Orden_Trabajo_Pk" class="formControl" data-division-id="@item.ID_Division_Fk">
+                            <option hidden selected value="">Seleccione usuario</option>
+                        </select>
+                    </div>
                 </td>
                 <td>
-                   @* <a asp-page="./Edit" asp-route-id="@item.ID_Tarea_Fk">Edit</a> | *@
-                    <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Details</a> 
-                   @*<a asp-page="./Delete" asp-route-id="@item.ID_Tarea_Fk">Delete</a> *@
-                </td> 
+                    <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Details</a>
+                </td>
             </tr>
         }
     </tbody>
 </table>
+
+<!-- Modal de confirmación -->
+<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" asp-page-handler="AsignarUsuario">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmModalLabel">Confirmar Asignación</h5>
+                </div>
+                <div class="modal-body">
+                    <p>¿Está seguro de querer asignar a <b id="usuarioNombre"></b> para esta tarea?</p>
+                    <input type="hidden" id="usuarioId" name="UsuarioId" />
+                    <input type="hidden" id="ordenTrabajoId" name="OrdenTrabajoId" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script type="text/javascript">
+        $(document).ready(function () {
+        $('select[id^="usuarioSelect_"]').each(function () {
+            var usuarioSelect = $(this); 
+            var selectedDivision = usuarioSelect.data('division-id');
+        
+            if (selectedDivision && usuarioSelect.find('option').length <= 1) {
+                $.ajax({
+                    url: '@Url.Page("./Index", "UsuariosFiltrados")',
+                    type: 'GET',
+                    data: { division: selectedDivision },
+                    success: function (data) {                        
+                        usuarioSelect.empty(); 
+                        usuarioSelect.append('<option hidden selected value="">Seleccione el usuario</option>');
+                        $.each(data, function (index, usuario) {
+                            usuarioSelect.append('<option value="' + usuario.iD_Usuario_Pk + '">' + usuario.nombre + ' ' + usuario.apellido + '</option>');
+                        });
+                    },
+                    error: function (error) {
+                        console.log('Error:', error);
+                    }
+                });
+            }
+        }); //LISTADO DE USUARIOS
+    
+        $('select[id^="usuarioSelect_"]').change(function () {
+            var selectedOption = $(this).find("option:selected");
+            var selectedUsuarioId = selectedOption.val();
+            var selectedOrdenTrabajoId = $(this).attr("id").split("_")[1];             
+            $('#usuarioNombre').text(selectedOption.text()); 
+            $('#usuarioId').val(selectedUsuarioId); 
+            $('#ordenTrabajoId').val(selectedOrdenTrabajoId); 
+
+            $('#confirmModal').modal('show'); 
+        }); //EVENTO ONCHANGE EN EL SELECT
+
+        $('#confirmarAsignacion').click(function () {
+            var usuarioId = $('#usuarioId').val();
+            var ordenTrabajoId = $('#ordenTrabajoId').val();
+            console.log(usuarioId);
+            console.log(ordenTrabajoId);
+            $.ajax({
+                url: '@Url.Page("./Index", "AsignarUsuario")',
+                type: 'POST',
+                data: { UsuarioId: usuarioId, OrdenTrabajoId: ordenTrabajoId },
+                success: function (response) {
+                    $('#confirmModal').modal('hide');
+                    alert("Usuario asignado con éxito");
+                    location.reload();
+                },
+                error: function (error) {
+                    console.log('Error:', error);
+                }
+            });
+
+        });
+
+
+        $('#cancelaAsignacion').click(function () {
+            $('#confirmModal').modal('hide');
+        });
+    });
+
+</script>
+
